New qbittorrent script

--- a/charts/qbittorrentvpn/templates/configmap-liveness.yaml
+++ b/charts/qbittorrentvpn/templates/configmap-liveness.yaml
@@ -6,11 +6,12 @@ data:
   liveness.sh: |
     #!/bin/bash
     DIR=/data/torrenting
-    if [[ -d "$DIR" ]]  && [[ "$(curl -sL -w '%{http_code}' http://localhost:8080 -o /dev/null)" = "200"  ]];
+    numFiles=`ls $DIR | wc -l`
+    # echo $numFiles
+    if [[ $numFiles -gt 1 ]]  && [[ "$(curl -sL -w '%{http_code}' http://localhost:8080 -o /dev/null)" = "200"  ]];
     then
       echo 0
     else
       echo "Liveness failed!" 1>&2
       exit 1
     fi
-  
