--- a/charts/qbittorrentvpn/templates/configmap-liveness.yaml
+++ b/charts/qbittorrentvpn/templates/configmap-liveness.yaml
@@ -7,7 +7,7 @@ data:
     #!/bin/bash
     DIR=/data/torrenting
     numFiles=`ls $DIR | wc -l`
-    # echo $numFiles
+    echo "Numero de ficheros encontrados en la carpeta" $numFiles
     if [[ $numFiles -gt 1 ]]  && [[ "$(curl -sL -w '%{http_code}' http://localhost:8080 -o /dev/null)" = "200"  ]];
     then
       echo 0
