--- a/charts/rclone-cache/templates/statefulset.yaml
+++ b/charts/rclone-cache/templates/statefulset.yaml
@@ -26,7 +26,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       volumes:
-        - name: rclone-cache-data
+        - name: rclone-data
           hostPath:
             path: {{ .Values.config.dataPath }}       
         - name: config-data
