--- a/charts/tautulli/templates/statefulset.yaml
+++ b/charts/tautulli/templates/statefulset.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: Statefulset
 metadata:
   name: {{ include "tautulli.fullname" . }}
   labels:
@@ -11,6 +11,7 @@ spec:
   selector:
     matchLabels:
       {{- include "tautulli.selectorLabels" . | nindent 6 }}
+  serviceName: {{ include "tautulli.fullname" . }} 
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -58,7 +59,7 @@ spec:
       volumes:
         - name: tautulli-config-volume
           persistentVolumeClaim:
-            claimName: tautulli-config     
+            claimName: tautulli-config-volume     
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -71,3 +72,14 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+  {{- if .Values.volumes.config.enabled }}
+  volumeClaimTemplates:
+    - metadata:
+        name: tautulli-config-volume
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        storageClassName: {{ .Values.volumes.config.storageClass }}
+        resources:
+          requests:
+            storage: {{ .Values.volumes.config.size }}    
+  {{- end }}          
