--- a/charts/torznab-atomohd/values.yaml
+++ b/charts/torznab-atomohd/values.yaml
@@ -8,7 +8,10 @@ image:
   repository: lavandadelpatio/torznab-atomohd
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
+
+spring:
+  profile: "pro"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -38,7 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
 
 ingress:
   enabled: false
