--- a/charts/plex/templates/service.yaml
+++ b/charts/plex/templates/service.yaml
@@ -11,6 +11,7 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.port }}
       protocol: TCP
       name: http
   selector:
