--- a/charts/qbittorrentvpn/templates/statefulset.yaml
+++ b/charts/qbittorrentvpn/templates/statefulset.yaml
@@ -31,7 +31,7 @@ spec:
       volumes:
         - name: data
           nfs:
-            server: {{ .Values.nfs.server }}}
+            server: {{ .Values.nfs.server }}
             path: {{ .Values.nfs.path }}
         - name: etc-localtime
           hostPath:
