--- a/charts/xteve/templates/deployment.yaml
+++ b/charts/xteve/templates/deployment.yaml
@@ -42,11 +42,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /web
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /web
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
