--- a/charts/xteve/values.yaml
+++ b/charts/xteve/values.yaml
@@ -10,6 +10,11 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
+
+
+environmentVariables:
+  XTEVE_PORT: 34400
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
