--- a/charts/plex-rclone-wireguard/values.yaml
+++ b/charts/plex-rclone-wireguard/values.yaml
@@ -38,7 +38,10 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext: 
+  privileged: true
+  capabilities:
+    add: ["NET_ADMIN", "SYS_TIME", "SYS_ADMIN"]
   # capabilities:
   #   drop:
   #   - ALL
