--- a/charts/plex-rclone-wireguard/templates/statefulset.yaml
+++ b/charts/plex-rclone-wireguard/templates/statefulset.yaml
@@ -80,9 +80,7 @@ spec:
           name: rclone-wireguard
           imagePullPolicy: Always
           securityContext:
-            privileged: true
-            capabilities:
-              add: ["NET_ADMIN", "SYS_TIME", "SYS_ADMIN"]
+            {{- toYaml .Values.securityContext | nindent 12 }}
           resources:
             requests:
               cpu: "20m"
@@ -151,9 +149,7 @@ spec:
             timeoutSeconds: 10
             periodSeconds: 10
             successThreshold: 1
-            failureThreshold: 3
-          securityContext:
-            privileged: true            
+            failureThreshold: 3     
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
