--- a/charts/qbittorrentvpn/templates/statefulset.yaml
+++ b/charts/qbittorrentvpn/templates/statefulset.yaml
@@ -157,7 +157,7 @@ spec:
             [
               "sh",
               "-c",
-              "rclone mount --config=/etc/rclone/rclone.conf rclone-with-cache: /data --log-level=INFO --umask 002 --allow-other --allow-non-empty  --dir-cache-time 100h --cache-dir=/tmp/rclone-cache --vfs-cache-mode full --vfs-cache-max-size 350G --vfs-cache-max-age 24h --drive-stop-on-upload-limit --drive-stop-on-download-limit --tpslimit 8 --drive-upload-cutoff 1000T  --bind=10.172.109.36 ",
+              "wg-quick up wg2 && rclone mount --config=/etc/rclone/rclone.conf rclone-with-cache: /data --log-level=INFO --umask 002 --allow-other --allow-non-empty  --dir-cache-time 100h --cache-dir=/tmp/rclone-cache --vfs-cache-mode full --vfs-cache-max-size 350G --vfs-cache-max-age 24h --drive-stop-on-upload-limit --drive-stop-on-download-limit --tpslimit 8 --drive-upload-cutoff 1000T  --bind=10.10.10.2  ",
             ]
           volumeMounts:
             - mountPath: /data
@@ -192,28 +192,28 @@ spec:
               name: health                 
             # - mountPath: /config/wireguard
             #   name: config-vpn    
-          livenessProbe:
-            exec:
-              command:
-                - bin/bash
-                - -c
-                - /health/liveness.sh
-            initialDelaySeconds: 30
-            timeoutSeconds: 20
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3                 
-          readinessProbe:
-            exec:
-              command:
-                - bin/bash
-                - -c
-                - /health/liveness.sh
-            initialDelaySeconds: 30
-            timeoutSeconds: 20
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3                        
+          # livenessProbe:
+          #   exec:
+          #     command:
+          #       - bin/bash
+          #       - -c
+          #       - /health/liveness.sh
+          #   initialDelaySeconds: 30
+          #   timeoutSeconds: 20
+          #   periodSeconds: 10
+          #   successThreshold: 1
+          #   failureThreshold: 3                 
+          # readinessProbe:
+          #   exec:
+          #     command:
+          #       - bin/bash
+          #       - -c
+          #       - /health/liveness.sh
+          #   initialDelaySeconds: 30
+          #   timeoutSeconds: 20
+          #   periodSeconds: 10
+          #   successThreshold: 1
+          #   failureThreshold: 3                        
           ports:
             - name: privoxy
               containerPort: 8181
